[gd_scene load_steps=6 format=3 uid="uid://b2p8dhx2tscub"]

[ext_resource type="Script" path="res://gui/main_menu/world_select/world_select.gd" id="1_wppwb"]
[ext_resource type="Theme" uid="uid://srv3f01l10d3" path="res://gui/default_theme.tres" id="1_xg3js"]

[sub_resource type="LabelSettings" id="LabelSettings_euyfs"]
font_size = 126
font_color = Color(1, 1, 1, 0.329412)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5tq6"]
bg_color = Color(0.0807833, 0.0807833, 0.0807833, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfy5u"]
bg_color = Color(1, 1, 1, 0.027451)
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_xg3js")
script = ExtResource("1_wppwb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Container" type="VBoxContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmptyLabel" type="Label" parent="VBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "wow, such empty..."
label_settings = SubResource("LabelSettings_euyfs")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="OpenFolder" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 81
text = "Open save folder"

[node name="Popup" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 81
text = "Create new world"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0550097, 0.0988456, 0.0906286, 1)

[node name="Popup" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -250.0
offset_right = 450.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u5tq6")

[node name="MarginContainer" type="MarginContainer" parent="Popup"]
layout_mode = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 75

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NameText" type="LineEdit" parent="Popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_gfy5u")
placeholder_text = "Name"
alignment = 1
max_length = 35
context_menu_enabled = false

[node name="SeedText" type="LineEdit" parent="Popup/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_gfy5u")
placeholder_text = "Seed"
alignment = 1
max_length = 35
context_menu_enabled = false

[node name="HSeparator" type="HSeparator" parent="Popup/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="Create" type="Button" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_gfy5u")
text = "Go"

[node name="Cancel" type="Button" parent="Popup/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_gfy5u")
text = "Cancel"

[node name="Confirm" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
title = ""
initial_position = 1
size = Vector2i(800, 350)
ok_button_text = "YES"
dialog_autowrap = true
cancel_button_text = "NO"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(500, 200)
dialog_autowrap = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/OpenFolder" to="." method="_on_open_folder_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Popup" to="." method="_on_popup_pressed"]
[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Popup/MarginContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="confirmed" from="Confirm" to="." method="_on_confirm_confirmed"]
